--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\rahul\Desktop\portfolio\style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://kit.fontawesome.com/4bc917f4c3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
 		<div class="container">
 			<nav>
-				<img src="C:\Users\rahul\Desktop\portfolio\Rahul-fotor-bg-remover-2024061925046.png" class="logo">
+				<img src="Rahul-fotor-bg-remover-2024061925046.png" class="logo">
 				<ul id="sidemenu">
 					<li><a href="#Home">Home</a></li>
 					<li><a href="#About">About</a></li>
@@ -28,7 +28,7 @@
 			<h1 class="header-text">Hi I'm Rahul<br> Kumar Nagavath</h1>
 			<p><span class="sudo">W</span>eb<span class="sudo">D</span>eveloper</p>
 		   	</div>
-		   	<img src="C:\Users\rahul\Desktop\portfolio\Remove background project-fotor-bg-remover-2024061922639.png">
+		   	<img src="Remove background project-fotor-bg-remover-2024061922639.png">
 		   	</div>
 	    </div>
 		</div>
@@ -188,6 +188,6 @@ I'm currently seeking new opportunities to contribute my skills and expertise to
   })
 </script>
 <script src="https://unpkg.com/scrollreveal"></script>
-<script type="text/javascript" src="C:\Users\rahul\Desktop\portfolio\javascript.js"></script>
+<script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
