--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<h1 class="header-text">Hi I'm Rahul<br> Kumar Nagavath</h1>
 			<p><span class="sudo">W</span>eb<span class="sudo">D</span>eveloper</p>
 		   	</div>
-		   	<img src="Remove background project-fotor-bg-remover-2024061922639.png">
+		   	<img src="image.png">
 		   	</div>
 	    </div>
 		</div>
