--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ I'm currently seeking new opportunities to contribute my skills and expertise to
 					<a href="https://github.com/rahul2317-NRK"><i class="fa-brands fa-github"></i></a>
 					<a href="https://www.instagram.com/r_a_h_u_l_k17"><i class="fa-brands fa-instagram"></i></a>
 				</div>
-				<a href="Resume1.pdf" download class="btn btn2 pen" >Download Cv</a>
+				<a href="Nagavath Rahul Kumar Resume.pdf" download class="btn btn2 pen" >Download Cv</a>
 			</div>
 			<div class="contact-right">
 				<form name="submit-to-google-sheet">
