--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="header">
 
 		<div class="container">
-			<nav class="navbar navbar-inverse navbar-fixed-top">
+			<nav>
 				<img src="Rahul-fotor-bg-remover-2024061925046.png" class="logo">
 				<ul id="sidemenu">
 					<li><a href="#Home">Home</a></li>
