Updated music app link and logo index.html

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ I'm currently seeking new opportunities to contribute my skills and expertise to
 	        		</div>
 	        	</div>
 	        	<div class="work">
-	        		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzn-L9_seGK3YaXgJNl0QNU8vF7jTKGH6JiA&s">
+	        		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTy3veV8txcdi4Nb4WC6ezBYWf5WO5otCsvww&s">
 	        		<div class="layer">
-	        			<h3>To-do list</h3>
-	        			<a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+	        			<h3>Music Player</h3>
+	        			<a href="https://sangeets.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 	        		</div>
 	        	</div>
 	        	<div class="work">
