--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ I'm currently seeking new opportunities to contribute my skills and expertise to
 	}
 </script>
 <script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbxeEsQdyqTQ8VW6OVDyMC5IvBhafUzXA6If7_KkzqEmOtl728GPqIVnNG3JiN7BgkAj/exec'
+  const scriptURL = 'https://docs.google.com/spreadsheets/d/1h23l7k7tqOwdYaBUteG29HvqZgb5uuFGkdOTDVdOo2Q/edit?gid=0#gid=0'
   const form = document.forms['submit-to-google-sheet']
   const msg = document.getElementById("msg")
 
