--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ I'm currently seeking new opportunities to contribute my skills and expertise to
 	}
 </script>
 <script>
-  const scriptURL = 'https://docs.google.com/spreadsheets/d/1h23l7k7tqOwdYaBUteG29HvqZgb5uuFGkdOTDVdOo2Q/edit?gid=0#gid=0'
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbysikG-nyFSmCUiq0ESXjRMLTzAY9hxKJdcFU6tquatFSeKuDrW9HQFdpZIbIddl5ws7Q/exec'
   const form = document.forms['submit-to-google-sheet']
   const msg = document.getElementById("msg")
 
